configuration/external-dns/nginx-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
  labels:
    type: webapp
    app: test
spec:
  template:
    metadata:
      name: myapp-pod
      labels:
        type: webapp
    spec:
      containers:
        - name: mywebapp
          image: nginx
  replicas: 3
  selector:
    matchLabels:
      type: webapp

---
apiVersion: v1
kind: Service
metadata:
  name: mysv-lb
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "nginx.traffic.org.in"
    external-dns.alpha.kubernetes.io/record-type: "CNAME"
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
  selector:
    type: webapp
