configuration/external-dns/webapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
  labels:
    type: webapp
spec:
  template:
    metadata:
      name: myapp-pod
      labels:
        type: webapp
    spec:
      containers:
        - name: mywebapp
          image: nginx
  replicas: 3
  selector:
    matchLabels:
      type: webapp

---
apiVersion: v1
kind: Service
metadata:
  name: mysv-cip
#  annotations:
#    external-dns.alpha.kubernetes.io/hostname: webapp.traffic.org.in
spec:
  ports:
    - port: 8081
      targetPort: 80
  selector:
    type: webapp
