configuration/external-dns/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  labels:
    name: dg-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: doctor.traffic.org.in
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mysv-cip
                port:
                  number: 8081
